Fixed spacing bug, aligned hero img center

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -139,7 +139,6 @@ $navbar-breakpoint: 769px
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
 footer.footer
-  padding: 3rem 0rem 0rem
   background-color: $white-ter
 
 //Menu overrides
