--- a/src/components/mystyles.css
+++ b/src/components/mystyles.css
@@ -92,7 +92,6 @@
   padding: 0 1rem; }
 
 footer.footer {
-  padding: 3rem 0rem 0rem;
   background-color: whitesmoke; }
 
 .menu-label {
